@@ -251,7 +251,7 @@ class RemedialActionCreationTest {
             .toList();
         assertEquals(10, importedRemedialActions.size());
 
-        NcCracCreationTestUtil.assertPstRangeActionImported((PstRangeAction) importedRemedialActions.get(0),
+        NcCracCreationTestUtil.assertPstRangeActionImported((PstRangeAction) importedRemedialActions.getFirst(),
             "remedial-action-1", "RTE_RA1", "BBE2AA1  BBE3AA1  1", null, null, "RTE");
         assertEquals(1, importedRemedialActions.get(0).getUsageRules().size());
         NcCracCreationTestUtil.assertHasOnInstantUsageRule(cracCreationContext, "remedial-action-1", NcCracCreationTestUtil.PREVENTIVE_INSTANT_ID);
